# Phosor

./: .gitignore  AGENT_STEPS.md  Agent_Guide.md  DEVLOG.md  IDEA_CONCEPT.md  PHASE4_COMPLETE.md  PHOSOR_SPEC.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt  test_engine_full.py  test_engine_init.py
configs/: config.example.toml
logs/: README.md
src/core/: __init__.py  cli.py  clustering.py  config.py  face_engine.py  file_scanner.py  folder_manager.py  models.py  utils.py
src/frontend/: __init__.py  app.py
src/frontend/api/: __init__.py  clusters.py  images.py
src/frontend/templates/: base.html  cluster_detail.html  index.html
tests/: __init__.py  test_clustering.py  test_config.py  test_face_engine.py  test_file_scanner.py  test_folder_manager.py
